--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Simple Landing Page</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-custom navbar-dark fixed-top" id="top">
@@ -45,7 +45,7 @@
             <h2 class="text-center">About Us</h2>
             <div class="row text-center abt-dtl">
                 <div class="col-md-6 set-img">
-                    <img src="assets/img/about_test.png" width="350px">
+                    <img src="about_test.png" width="350px">
                 </div>
                 <div class="col-md-6">
                     <p class="pg-abt">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatem eligendi repudiandae minima odit aperiam expedita hic aut a, sit et accusamus dolorum cupiditate fugit totam deleniti at amet maxime, officiis reprehenderit eos. Sed accusamus facere alias repudiandae quasi vel maxime animi iste voluptas illum eos veniam dolore nihil officiis dolorem sint fugiat, minima exercitationem quia mollitia, in quas beatae! Dicta debitis minima doloribus ea repellendus voluptates, cupiditate officiis hic neque quae odit quidem cum nam? Odit nemo cumque ex veniam.</p>
